# Rust-SalmonAccountManagement

./: .gitignore  docker-compose.yml
double_entry_backend/: .env  Cargo.toml  Rocket.toml
double_entry_backend/src/: lib.rs  main.rs
double_entry_backend/src/application/usecase/: a_init_usecases.rs  auth_usecase.rs  company_usecase.rs  contact_detail_usecase.rs  contact_type_usecase.rs  contact_usecase.rs  info_usecase.rs  mod.rs  project_status_usecase.rs  project_usecase.rs
double_entry_backend/src/config/: a_init_openapi_config.rs  api_doc_auth_config.rs  api_doc_company_config.rs  api_security_addon.rs  db_config.rs  jwt_config.rs  mod.rs
double_entry_backend/src/config/api_doc_config/: api_config.rs  api_doc_account_balance_config.rs  api_doc_account_config.rs  api_doc_auth_config.rs  api_doc_chart_of_account_config.rs  api_doc_company_config.rs  api_doc_contact_config.rs  api_doc_contact_detail.rs  api_doc_contact_type_config.rs  api_doc_customer_config.rs  api_doc_customer_contact.rs  api_doc_info_config.rs  api_doc_jounal_entry_config.rs  api_doc_location_config.rs  api_doc_location_type_config.rs  api_doc_project_config.rs  api_doc_project_status_config.rs  api_doc_reference_type_config.rs  api_doc_utility_config.rs  mod.rs
double_entry_backend/src/domain/: mod.rs
double_entry_backend/src/domain/dto/: auth_dto.rs  company_dto.rs  contact_detail_dto.rs  contact_dto.rs  contact_type_dto.rs  customer_contact_dto.rs  customer_dto.rs  info_dto.rs  location_dto.rs  location_type.rs  location_type_dto.rs  mod.rs  project_dto.rs  project_status.rs  project_status_dto.rs  project_x_info_dto.rs  std_201.rs  user.rs
double_entry_backend/src/domain/entities/: company.rs  contact.rs  contact_detail.rs  contact_type.rs  info.rs  mod.rs  prelude.rs  project.rs  project_status.rs  project_x_info.rs  user.rs
double_entry_backend/src/domain/repository/: mod.rs
double_entry_backend/src/infrastructure/: mod.rs
double_entry_backend/src/infrastructure/argon_hash/: hash_util.rs
double_entry_backend/src/infrastructure/faring/: authentication.rs
double_entry_backend/src/infrastructure/handler/: mod.rs
double_entry_backend/src/ref/: jwtgetn.txt  manage-statuscode-txt
double_entry_backend/src/reference/: 1api.txt  sea-script.txt  บันทึกทุน.txt  บันทึกรายจ่าย.txt
uml/: BackendArchitecture.iuml  ER.iuml  (+2 more)
(+116 files in other folders)
