[package]
name = "double_entry_backend"
version = "0.1.0"
edition = "2021"

[dependencies]

rocket = { version = "0.5.1", features = ["json"]}
sea-orm = { version = "1.1.4", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }

dotenv = "0.15.0"
anyhow = "1.0.40"
utoipa = "5.3.1"
utoipa-swagger-ui = {version="*", features=["rocket"]}
serde = { version = "1.0.217", features = ["derive"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.17.0"
validator = {version = "0.20.0", features = ["derive"]}

sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "macros", "mysql"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
diesel = { version = "2.2.0", features = ["mysql"] }


[dev-dependencies]
mockall = "0.13.1"